Added: basic calculator layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <input type="text" name="text" id="nonedit" />
+      <div id="buttonfield">
+        <div id="numbers">
+          <button id="numBtn0" class="numbersminwidth">0</button>
+          <button id="numBtnDot" class="numbersminwidth">.</button>
+          <button id="numBtn1">1</button>
+          <button id="numBtn2">2</button>
+          <button id="numBtn3">3</button>
+          <button id="numBtn4">4</button>
+          <button id="numBtn5">5</button>
+          <button id="numBtn6">6</button>
+          <button id="numBtn7">7</button>
+          <button id="numBtn8">8</button>
+          <button id="numBtn9">9</button>
+        </div>
+        <div id="operators">
+          <button id="numBtnClear">CLEAR</button>
+          <button id="numBtnAdd">+</button>
+          <button id="numBtnSubtract">-</button>
+          <button id="numBtnMultiply">*</button>
+          <button id="numBtnDivide">/</button>
+          <button id="numBtnEqual">=</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
