Added: +/-, del button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <input type="text" name="text" id="nonedit" />
       <div id="buttonfield">
         <div id="numbers">
-          <button id="numBtn0" class="numbersminwidth">0</button>
-          <button id="numBtnDot" class="numbersminwidth">.</button>
+          <button id="numBtn0">0</button>
+          <button id="numBtnDot">.</button>
+          <button id="numBtnSign">+/-</button>
           <button id="numBtn1">1</button>
           <button id="numBtn2">2</button>
           <button id="numBtn3">3</button>
@@ -27,6 +28,7 @@
         </div>
         <div id="operators">
           <button id="numBtnClear">CLEAR</button>
+          <button id="numBtnDelete">DEL</button>
           <button id="numBtnAdd">+</button>
           <button id="numBtnSubtract">-</button>
           <button id="numBtnMultiply">*</button>
